# DataDigestAI

./: .gitignore  Dockerfile  README.md  deploy.yaml  main.py  pyproject.toml
.github/workflows/: actions.yaml
backend/: consts.py  core.py  ingestion.py
