[project]
name = "infodigest"
version = "0.1.0"
description = ""
authors = [
    {name = "Igorithm",email = "amit.biswas@carxstream.in"}
]
readme = "README.md"
requires-python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
dependencies = [
    "langchain-pinecone (>=0.2.2,<0.3.0)",
    "langchain (>=0.3.14,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain-community (>=0.3.14,<0.4.0)",
    "openai (>=1.59.7,<2.0.0)",
    "langchain-openai (>=0.3.0,<0.4.0)",
    "langchain-text-splitters (>=0.3.5,<0.4.0)",
    "unstructured (>=0.16.13,<0.17.0)",
    "psutil (>=6.1.1,<7.0.0)",
    "exceptiongroup (>=1.2.2,<2.0.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "streamlit-chat (>=0.1.1,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
